Fix for horizontal scroll bug on some pages
(It was happening due to .remark-highlight component, stretching out .blogpost-content without properly set width)

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -866,6 +866,7 @@ h2 {
 }
 
 .blogpost-content {
+  min-width: 1px;
   -ms-flex-positive: 1;
   flex-grow: 1;
   border-right: 1px solid #e7e7e7;
